PS-780 - Item Entry Hotfix Visual HTML - Alignment tweaks of inputs and other internal QA fixes

--- a/src/sass/bootstrap/_forms.scss
+++ b/src/sass/bootstrap/_forms.scss
@@ -85,12 +85,12 @@ input[type="checkbox"]:focus {
 
 // Hide up and down arrows in number fields
 input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type="number"] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 // Adjust output element
@@ -177,7 +177,7 @@ output {
     opacity: 1;
 
     // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655
-
+ 
   }
 
   &[disabled],
@@ -215,7 +215,7 @@ select.form-control {
 
   + .lt-triangle-down.form-control-feedback {
     // transform: rotate(90deg);
-
+ 
   }
 }
 
@@ -626,14 +626,12 @@ select.form-control.input-lg {
     & + span.lt-icon {
       pointer-events: none;
     }
-
   }
 
   // make sure default down arrow is hidden on IE
   select::-ms-expand {
     display: none;
   }
-
 }
 
 // Feedback icon (requires .lt-icon classes)
@@ -701,6 +699,8 @@ select.form-control.input-lg {
 
 .has-error {
   @include form-control-validation($state-danger-text, $state-danger-text, $state-danger-bg);
+
+  border-width: $state-danger-border-width;
 }
 
 // Reposition feedback icon if input has visible label above
@@ -853,7 +853,7 @@ select.form-control.input-lg {
     padding-top: $padding-base-vertical + 1;
 
     // Default padding plus a border
-
+ 
   }
 
   // Account for padding we're adding to ensure the alignment and of help text
@@ -877,7 +877,7 @@ select.form-control.input-lg {
       padding-top: $padding-base-vertical + 1;
 
       // Default padding plus a border
-
+   
     }
   }
 
