--- a/src/sass/bootstrap/mixins/_clearfix.scss
+++ b/src/sass/bootstrap/mixins/_clearfix.scss
@@ -10,13 +10,23 @@
 //
 // Source: http://nicolasgallagher.com/micro-clearfix-hack/
 
-@mixin clearfix() {
+@mixin clearfix {
   &:before,
   &:after {
-    content: " "; // 1
-    display: table; // 2
+    content: " ";
+
+    // 1
+    display: table;
+
+    // 2
+ 
   }
+
   &:after {
     clear: both;
   }
+}
+
+.clear {
+  clear: both;
 }
